[package]
name = "quelleheureest"
version = "0.0.1"
description = "QuelleHeureEst-Il - A native cross-platform weather and time application"
authors = ["Your Name"]
edition = "2021"
publish = false

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
rusqlite = { version = "0.29", features = ["bundled", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
urlencoding = "2.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
